log
Thu 28 Sep 2023 12:18:53 AM UTC: 
 heap.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:39:18: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   39 |   newHeap->capac = NULL;
      |                  ^
heap.c:40:17: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   40 |   newHeap->size = NULL;
      |                 ^
heap.c:41:24: error: implicit declaration of function ‘createList’ [-Werror=implicit-function-declaration]
   41 |   newHeap->heapArray = createList();
      |                        ^~~~~~~~~~
heap.c:41:22: error: assignment to ‘heapElem *’ {aka ‘struct nodo *’} from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   41 |   newHeap->heapArray = createList();
      |                      ^
cc1: all warnings being treated as errors
Compilation failed
18307a9
Thu 28 Sep 2023 12:22:47 AM UTC: 
 heap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:41:61: error: invalid operands to binary * (have ‘long unsigned int’ and ‘heapElem *’ {aka ‘struct nodo *’})
   41 |   newHeap->heapArray = (heapElem *) malloc(sizeof(heapElem) * newHeap->heapArray);
      |                                                             ^ ~~~~~~~~~~~~~~~~~~
      |                                                                      |
      |                                                                      heapElem * {aka struct nodo *}
Compilation failed
9939207
Thu 28 Sep 2023 12:23:33 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
63374df
Thu 28 Sep 2023 12:25:48 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
9c7c495
Thu 28 Sep 2023 12:35:51 AM UTC: 
 heap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:22:15: error: comparison between pointer and integer [-Werror]
   22 |   if(pq->size == NULL) return NULL;
      |               ^~
cc1: all warnings being treated as errors
Compilation failed
49850b1
Thu 28 Sep 2023 12:36:10 AM UTC: 
 heap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
1383c84
